# Huffman-Encoding

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  README_Huffman.md  app.py  requirements.txt  routes.py  testing.md
Huffman_C/: huffman  huffman.cpp  huffman.h  huffman_main.cpp  main  main.cpp
templates/: index.html
tests/: huffman_tests.cpp
tests/Test Cases/: large_file.txt  mix.txt  numerical.txt  repeated_char.txt  simple_phrase.txt
